Main container and swimlane mods to support scaling swimlanes in Time Strip view. - TimelineViewLayout.vue now adds `is-object-type-*` to its container to allow CSS selection. - Object's `c-object-view` handles overflow-y with scroll when in Time Strip. This is necessary to prevent scrolling of the left hand labels and maintain a consistent right edge alignment for time sync purposes. - Fixed long-standing regression where extra space was added for the toolbar when editing, even if view does not use a toolbar. - Main view now uses dashed border instead of box-shadow for `.is-editing`; theme constants removed.

--- a/src/plugins/plan/plan.scss
+++ b/src/plugins/plan/plan.scss
@@ -29,7 +29,6 @@
     }
 
     .c-swimlane {
-      background: rgba(green, 0.3) !important;
       flex: 1 0 auto;
     }
 
@@ -71,5 +70,13 @@
 
   &__svg {
     width: 100%;
+  }
+}
+
+// When in a Time Strip view
+.c-timeline__objects {
+  .is-object-type-plan {
+    overflow-x: hidden;
+    overflow-y: scroll !important; // `scroll` ensures that right edges align in time
   }
 }
